@@ -1,3 +1,8 @@
+2010-07-08  Markus Gutschke  <markus@shellinabox.com>
+
+	* Added support for systems that have utmpx.h, but don't implement
+	updwtmpx().
+
 2010-07-02  Markus Gutschke  <markus@shellinabox.com>
 
 	* Fixed a NULL pointer dereference that can occur when hostnames
